added bottles and background, basic grid and flex

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alice in Wonderland</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <div id="room">
+
+        </div>
+        <div id="bar">
+           <div class="drinks-flex">
+                <img id="drink-pink" class="drinks"
+                src="img/pink-bottle.png" alt="Pink Bottle">
+            </div>
+            <div class="drinks-flex">
+                <img id="drink-blue" class="drinks" src="img/blue-bottle.png" alt="Blue Bottle">
+            </div>
+        </div>
+    </div>
+    <script src="animation.js"></script>
 </body>
 </html>
