--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div id="wrapper">
         <div id="room">
-
+            <div id="alice-container">
+                <div id="alice-s"></div>
+            </div>
         </div>
         <div id="bar">
            <div class="drinks-flex">
