alice size function

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div id="wrapper">
         <div id="room">
             <div id="alice-container">
-                <div id="alice-s"></div>
+                <div id="alice" class="alice-m"></div>
             </div>
         </div>
         <div id="bar">
            <div class="drinks-flex">
-                <img id="drink-pink" class="drinks"
-                src="img/pink-bottle.png" alt="Pink Bottle">
+                <img id="drink-shrink" class="drinks"
+                src="img/pink-bottle-shrink.png" alt="Pink Bottle">
             </div>
             <div class="drinks-flex">
-                <img id="drink-blue" class="drinks" src="img/blue-bottle.png" alt="Blue Bottle">
+                <img id="drink-grow" class="drinks" src="img/blue-bottle-grow.png" alt="Blue Bottle">
             </div>
         </div>
     </div>
